given a list of integers, create the largest number possible by splicing them together